added links to Hangman and RPG-Game

--- a/portfolio.html
+++ b/portfolio.html
@@ -29,10 +29,10 @@
 
             <!--Putting placeholder images on the screen with their text below for now-->
             <div class="projects">
-                <img id="Hangman" src="assets/images/intel.jpg" alt="Hangman">
+                <img id="Hangman" src="assets/images/intel.jpg" alt="Hangman" href="https://spencercaretta.github.io/Word-Guess-Game/">
                 <div class="Hangman">Hangman</div>
                 <br />
-                <img id="RPG-Game" src="assets/images/blockchain.png" alt="RPG-Game">
+                <img id="RPG-Game" src="assets/images/blockchain.png" alt="RPG-Game" href="https://spencercaretta.github.io/unit-4-game/">
                 <div class="RPG-Game">RPG Game</div>
                 <br />
                 <img id="Trivia-Game" src="assets/images/diagram.png" alt="Trivia-Game">
